2006-01-24  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/scripting/bindings/lua/ogre/required.h: added some needed defintions of basic types that msvc didn't get
    * src/services/scripting/ScriptingService.cpp: added missing return value
    * src/components/ogre/model/XMLModelDefinitionSerializer.cpp: modified for win32, make sure the directory where the modeldefinitions are stored really exists

2006-01-24  Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/config/ConfigService.cpp: adapt paths so they will work better on win32
    * ember.conf: fixed the name of "logginglevel" (not "loggingmode")
    * ember.vcproj: updated to work with cvs, though some paths still need to be fixed
    * EmberOgre.cpp: 
        * better exception reporting and handling
        * since there was some problems with building the SoundManager on windows, disable calls to it for now on that platform
    * src/components/ogre/widgets/EntityCEGUITexture.cpp: added more verbose logging
    * src/components/ogre/widgets/GUIManager.cpp: reactivate the quit widget
    * src/components/ogre/model/NodelDefinition.h: removed unneeded reference to hash_map
    * src/components/ogre/SceneManagers/EmberPagingSceneManager/src/OgrePagingLandScapeIntersectionSceneQuery.cpp: removed code that won't compile and isn't used anyway

2006-01-23  Erik Hjortsberg  <erik@katastrof.nu>

    * src/component/ogre/widgets/EntityCEGUITexture.h: more comments

2006-01-18  Miguel Guzman  <aglanor@gmail.com>
    * src/services/sound/SoundService.*:
        * added a method to update the listener position
    * src/components/ogre/AvatarCamera.*:
        * made AvatarCamera an Ogre::FrameListener
        * each frame, it updates the SoundService listener position
          to the camera position

2006-01-17  Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberEntity.*|EmberPhysicalEntity.*:
        * made onTalk work since the signature been changed